force-app/main/default/objects/universalValueMap__mdt/universalValueMap__mdt.object-meta.xml
<CustomObject>
    <label>universalValueMap</label>
    <pluralLabel>universalValueMaps</pluralLabel>
</CustomObject>