force-app/main/default/objects/universalValueMap__mdt/fields/ExtValue__c.field-meta.xml
<CustomField>
    <fullName>ExtValue__c</fullName>
    <label>ExtValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>