force-app/main/default/objects/universalValueMap__mdt/fields/fieldName__c.field-meta.xml
<CustomField>
    <fullName>fieldName__c</fullName>
    <label>fieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>