force-app/main/default/objects/universalValueMap__mdt/fields/SFDC_value__c.field-meta.xml
<CustomField>
    <fullName>SFDC_value__c</fullName>
    <label>SFDC_value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>