force-app/main/default/objects/universalValueMap__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>objectName__c</columns>
    <columns>fieldName__c</columns>
    <columns>SFDC_value__c</columns>
    <columns>ExtValue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>